--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <h1>Hello first my github repo</h1>
     <p>Lorem ipsum dolor sit amet.</p>
     <span>Hello</span>
+    <img src="https:picsum.photos/2000" alt="photo">
 </body>
 </html>
